# BetGenius

./: CONTRIBUTING.md  COPYING  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac
build_msvc/: README.md  betgenius.sln  betgenius_config.h.in  msvc-autogen.py  vcpkg.json
ci/: lint_imagefile  lint_run_all.sh
contrib/: README.md  filter-lcov.py  valgrind.supp
depends/: Makefile  README.md  config.guess  config.sub  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  betgenius-conf.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  tor.md  tracing.md  (+3 more)
doc/man/: Makefile.am  betgenius-cli.1  betgenius-qt.1  betgenius-tx.1  betgenius-util.1  betgenius-wallet.1  betgeniusd.1
share/: genbuild.sh  setup.nsi.in
src/: .clang-tidy  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  (+151 more)
(+1524 files in other folders)
