dist_man1_MANS=

if BUILD_BETGENIUSD
  dist_man1_MANS+=betgeniusd.1
endif

if ENABLE_QT
  dist_man1_MANS+=betgenius-qt.1
endif

if BUILD_BETGENIUS_CLI
  dist_man1_MANS+=betgenius-cli.1
endif

if BUILD_BETGENIUS_TX
  dist_man1_MANS+=betgenius-tx.1
endif

if BUILD_BETGENIUS_UTIL
  dist_man1_MANS+=betgenius-util.1
endif

if ENABLE_WALLET
if BUILD_BETGENIUS_WALLET
  dist_man1_MANS+=betgenius-wallet.1
endif
endif
